<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DSSDK Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_open_image">Open</string>
    <string name="btn_take_photo">Shot</string>
    <string name="btn_crop_image">Crop</string>
    <string name="btn_save_image">Save</string>
    <string name="action_force_manual_crop">Manual crop</string>
    <string name="action_using_fx_sdk">Use FX SDK</string>
    <string name="action_strong_shadows">Strong shadows</string>
    <string name="action_about">About</string>
    <string name="select_picture_title">Select Picture</string>
    <string name="msg_bad_external_storage">No available storage found.</string>
    <string name="msg_processing_complete">Processing complete</string>
    <string name="msg_processing_error">Processing error</string>
    <string name="msg_no_doc_corners">No document corners found</string>
    <string name="msg_invalid_corners">Document corners are invalid</string>
    <string name="msg_out_of_memory">Out of memory!</string>
    <string name="msg_cannot_open_file">Cannot open image file\n%1$s</string>
    <string name="msg_image_file_info">Open image file %1$4dx%2$4d\n%3$s</string>
    <string name="msg_cannot_write_image_file">Cannot save image</string>
    <string name="msg_unknown_error">Unknown error %1$d</string>
    <string name="processed_images_album">/com.pixelnetica.imagedemo/media/Pixelnetica</string>
    <string name="processed_images_file">cropdemo%1$016x.%2$s</string>
    <string name="share_output_title">Share DI SDK output</string>

    <string name="msg_cannot_save_file">Cannot save processed image</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile_group">Processing profile</string>
    <string name="action_profile_nobinarization">Original</string>
    <string name="action_profile_bwbinarization">Black &amp; White</string>
    <string name="action_profile_graybinarization">Gray</string>
    <string name="action_profile_colorbinarization">Color</string>
    <string name="action_rotate_left">Rotate left</string>
    <string name="action_rotate_right">Rotate right</string>
    <string name="action_revert_selection">Revert selection</string>
    <string name="action_expand_selection">Expand selection</string>
    <string name="about_title">Crop Demo</string>
    <string name="about_message">%1$s&lt;br&gt;Version %2$s (%3$s)&lt;br&gt;See more on &lt;a href=&quot;https://www.pixelnetica.com/products/document-scanning-sdk/document-scanner-sdk.html&quot;&gt;Pixelnetica DSSDK&lt;/a&gt;</string>
    <string name="about_ok">OK</string>
    <string name="camera_activity_title">DI SDK Camera</string>
    <string name="button_camera_shot_desc">Take a shot</string>
    <string name="check_camera_settings_desc">Find document corners</string>
    <string name="msg_looking_for_document">Looking for document</string>
    <string name="settings_title">Settings</string>
    <string name="settings_camera_title">Camera parameters</string>
    <string name="settings_camera_preview_label">Camera preview size</string>
    <string name="settings_camera_serial_shot">Serial shot</string>
    <string name="settings_app_force_manual_crop">Force manual crop on image open</string>
    <string name="settings_app_auto_crop_on_open">Smart-Crop on image open</string>
    <array name="setting_save_formats">
        <!-- Must be in same order as CropDemoApp.SAVE_XXX -->
        <item>Save format JPEG</item>
        <item>Save format Tiff G4</item>
        <item>Save format PNG</item>
        <item>Save format PDF</item>
        <item>Save format PDF/PNG (BW only!)</item>
    </array>
    <string name="save_format_title">Save format</string>
    <string name="save_format_jpeg">JPEG</string>
    <string name="save_format_tiff">TIFF G4</string>
    <string name="save_format_png">PNG</string>
    <string name="save_format_pdf">PDF</string>
    <string name="save_format_pdf_png">PDF/PNG</string>
    <string name="save_format_pages">Simulate multi pages</string>
    <string name="save_format_simulate_pages">Simulate multiple pages</string>
	<string name="save_format_pdf_config_title">Some PDF page configurations</string>
	<string name="save_format_pdf_config_default">Default</string>
	<string name="save_format_pdf_config_predefined">Predefined (half letter)</string>
	<string name="save_format_pdf_config_custom">Custom (eq. A5)</string>
	<string name="save_format_pdf_config_extensible">Extensible</string>
    <string name="settings_simulate_pages">Simulate multiple pages</string>
    <string name="settings_camera_fullness_rate">Area rate</string>
    <string name="settings_camera_distortion_rate">Distortion rate</string>
    <string name="settings_camera_second_aspect">Area second aspect</string>
    <string name="settings_camera_second_rate">Area second rate</string>
    <string name="permission_query_read_storage">Allow CropDemo to access photos and files on your device?</string>
    <string name="permission_query_write_storage">Allow CropDemo to write files to your device?</string>
    <string name="permission_query_camera">Allow CropDemo to take pictures and record video?</string>

    <string name="camera_shot_busy">Camera busy</string>
    <string name="camera_shot_not_stable">Camera is shaking</string>
    <string name="camera_shot_focus_timeout">Shot failed</string>
    <string name="camera_shot_focus_failed">Cannot focus camera. Try one more time.</string>
    <string name="camera_looking_for_document">Looking for the document</string>
    <string name="camera_uncertain_detection">"Uncertain detection"</string>
    <string name="camera_small_area">"Move Camera closer to document"</string>
    <string name="camera_distorted">"Hold camera parallel to document"</string>
    <string name="title_activity_camera">CropDemo Camera</string>
</resources>
