<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	>

	<android.support.v7.widget.AppCompatTextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/save_format_title"/>
	<RadioGroup
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/save_format_group">
		<android.support.v7.widget.AppCompatRadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/save_format_jpeg"
			android:text="@string/save_format_jpeg"/>
		<android.support.v7.widget.AppCompatRadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/save_format_tiff"
			android:text="@string/save_format_tiff"/>
		<android.support.v7.widget.AppCompatRadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/save_format_png"
			android:text="@string/save_format_png"/>
		<android.support.v7.widget.AppCompatRadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/save_format_pdf"
			android:text="@string/save_format_pdf"/>
		<android.support.v7.widget.AppCompatRadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/save_format_pdf_png"
			android:text="@string/save_format_pdf_png"/>
	</RadioGroup>
	<android.support.v7.widget.AppCompatTextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/save_format_pdf_config_title"
		android:text="@string/save_format_pdf_config_title"/>
	<RadioGroup
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/save_format_pdf_config_group">
		<android.support.v7.widget.AppCompatRadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/save_format_pdf_config_default"
			android:text="@string/save_format_pdf_config_default"/>
		<android.support.v7.widget.AppCompatRadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/save_format_pdf_config_predefined"
			android:text="@string/save_format_pdf_config_predefined"/>
		<android.support.v7.widget.AppCompatRadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/save_format_pdf_config_custom"
			android:text="@string/save_format_pdf_config_custom"/>
		<android.support.v7.widget.AppCompatRadioButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/save_format_pdf_config_extensible"
			android:text="@string/save_format_pdf_config_extensible"/>
	</RadioGroup>
	<android.support.v7.widget.AppCompatCheckBox
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/save_format_simulate_pages"
		android:text="@string/save_format_simulate_pages"/>
</LinearLayout>