<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

	<androidx.appcompat.widget.Toolbar
		android:id="@+id/app_toolbar"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:minHeight="?attr/actionBarSize"
		android:background="?attr/colorPrimary"
		android:theme="@style/AppTheme.ActionBar"
        app:popupTheme="@style/AppTheme.ActionBar.Popup"
		>
		<LinearLayout
					  style="?attr/buttonBarStyle"
					  android:layout_width="fill_parent"
					  android:layout_height="wrap_content"
					  android:orientation="horizontal"
					  android:layout_gravity="center"
			>
			<androidx.appcompat.widget.AppCompatButton
				style="?attr/buttonBarButtonStyle"
				android:id="@+id/btn_open_image"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/btn_open_image"
				android:drawableLeft="@drawable/ic_action_picture"/>
			<androidx.appcompat.widget.AppCompatButton
				style="?attr/buttonBarButtonStyle"
				android:id="@+id/btn_take_photo"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/btn_take_photo"
				android:drawableStart="@drawable/ic_action_camera"/>
			<androidx.appcompat.widget.AppCompatButton
				style="?attr/buttonBarButtonStyle"
				android:id="@+id/btn_crop_image"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:visibility="gone"
				android:text="@string/btn_crop_image"
				android:drawableStart="@drawable/ic_action_crop"/>
			<androidx.appcompat.widget.AppCompatButton
				style="?attr/buttonBarButtonStyle"
				android:id="@+id/btn_save_image"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:visibility="gone"
				android:text="@string/btn_save_image"
				android:drawableStart="@drawable/ic_action_save"/>
		</LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <!-- Main image view with progress waiter -->
	<!--
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	-->
	<FrameLayout
	    android:id="@+id/image_container"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    tools:context="com.pixelnetica.easyscan.MainActivity"
	    tools:ignore="MergeRootFrame" >

	    <com.pixelnetica.easyscan.CropImageView
	        android:contentDescription="@string/hello_world"
	        android:id="@+id/image_holder"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:background="@drawable/border_2dp"
	        android:cropToPadding="true"
	        android:padding="2dp"
	        android:scaleType="fitCenter"
	        />

	    <ProgressBar
	        android:id="@+id/progress_wait"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:indeterminate="true"
	        android:visibility="invisible"
	        />
	</FrameLayout>

    <!-- Crop button bar -->
	<androidx.appcompat.widget.Toolbar
		android:id="@+id/crop_toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:minHeight="?attr/actionBarSize"
		android:background="?attr/colorPrimary"
		android:theme="@style/AppTheme.ActionBar"
		app:theme="@style/AppTheme.ActionBar"
		android:visibility="gone"
		>
		<LinearLayout
			style="?attr/buttonBarStyle"
			android:id="@+id/crop_button_bar"
			android:orientation="horizontal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:background="?attr/colorPrimary">
			<androidx.appcompat.widget.AppCompatImageButton
				style="?attr/buttonBarButtonStyle"
				android:id="@+id/btn_rotate_left"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:src="@drawable/ic_action_rotate_left"/>
			<androidx.appcompat.widget.AppCompatImageButton
				style="?attr/buttonBarButtonStyle"
				android:id="@+id/btn_rotate_right"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:src="@drawable/ic_action_rotate_right"/>
			<androidx.appcompat.widget.AppCompatImageButton
				style="?attr/buttonBarButtonStyle"
				android:id="@+id/btn_revert_selection"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:src="@drawable/ic_action_view_as_grid"/>
			<androidx.appcompat.widget.AppCompatImageButton
				style="?attr/buttonBarButtonStyle"
				android:id="@+id/btn_expand_selection"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:src="@drawable/ic_action_select_all"/>
		</LinearLayout>
	</androidx.appcompat.widget.Toolbar>
</LinearLayout>
